--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
+    "@types/react-bootstrap-typeahead": "^3.4.5",
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^1.9.1",
     "next": "^9.1.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.10.2"
   },
   "devDependencies": {
