--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
     "chroma-js": "^2.0.6",
+    "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
     "next": "^9.1.1",
     "react": "^16.10.2",
