--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
     "@types/chroma-js": "^1.4.3",
+    "@types/query-string": "^6.3.0",
     "@types/react-bootstrap-typeahead": "^3.4.5",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
@@ -29,6 +30,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
     "next": "^9.1.1",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-typeahead": "^3.4.7",
