--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-typeahead": "^3.4.7",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-loading-overlay": "^1.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.6.3",
