Add the roster comparison tablee

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-loading-overlay": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@types/enzyme": "^3.10.3",
@@ -54,6 +55,6 @@
     "jest": "^24.9.0",
     "react-test-renderer": "^16.10.2",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.0-beta"
   }
 }
