--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   },
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@types/chroma-js": "^1.4.3",
+    "@types/clipboard": "^2.0.1",
     "@types/query-string": "^6.3.0",
     "@types/react-bootstrap-typeahead": "^3.4.5",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
     "chroma-js": "^2.0.6",
+    "clipboard": "^2.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
     "next": "^9.1.1",
@@ -35,6 +40,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.10.2",
+    "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1"
   },
   "devDependencies": {
