--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clipboard": "^2.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
+    "local-storage": "^2.0.0",
     "next": "^9.1.1",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
