Add draft version of lineup analyzer as unlinked page

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@types/chroma-js": "^1.4.3",
     "@types/clipboard": "^2.0.1",
+    "@types/lodash": "^4.14.144",
     "@types/query-string": "^6.3.0",
     "@types/react-select": "^3.0.6",
     "@zeit/next-css": "^1.0.1",
@@ -35,6 +36,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.15",
     "next": "^9.1.1",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
