--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^1.9.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
+    "lzutf8": "^0.5.5",
     "next": "^9.1.1",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
