--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clipboard": "^2.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.9.1",
+    "js-base64": "^2.5.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
@@ -47,7 +48,9 @@
     "react-dom": "^16.10.2",
     "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "reshake": "^1.2.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
