--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "js-base64": "^2.5.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
+    "lodash.combinations": "^18.9.19",
     "lru-cache": "^5.1.1",
     "lzutf8": "^0.5.5",
     "next": "^9.1.1",
