--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "^9.1.1",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
+    "react-autocomplete-input": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-ga": "^2.7.0",
