--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@types/query-string": "^6.3.0",
     "@types/react-select": "^3.0.6",
     "@zeit/next-css": "^1.0.1",
+    "acorn": "^7.2.0",
     "bootstrap": "^4.3.1",
     "chroma-js": "^2.0.6",
     "clipboard": "^2.0.4",
     "isomorphic-unfetch": "^3.0.0",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
     "js-base64": "^2.5.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.15",
@@ -43,7 +44,7 @@
     "lru-cache": "^5.1.1",
     "lzutf8": "^0.5.5",
     "mathjs": "^6.6.2",
-    "next": "^9.1.1",
+    "next": "^9.4.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-autocomplete-input": "^1.0.12",
@@ -52,6 +53,7 @@
     "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
     "react-select": "^3.0.8",
+    "recharts": "^1.8.5",
     "reshake": "^1.2.1",
     "styled-components": "^4.4.1",
     "svd-js": "^1.0.6"
