--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "recharts": "^1.8.5",
     "reshake": "^1.2.1",
     "styled-components": "^4.4.1",
-    "svd-js": "^1.0.6"
+    "svd-js": "^1.0.6",
+    "use-mouse-leave": "^1.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
