--- a/package.json
+++ b/package.json
@@ -21,62 +21,62 @@
   },
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/chroma-js": "^1.4.3",
     "@types/clipboard": "^2.0.1",
-    "@types/lodash": "^4.14.144",
+    "@types/lodash": "^4.14.161",
     "@types/lru-cache": "^5.1.0",
     "@types/query-string": "^6.3.0",
-    "@types/react-select": "^3.0.6",
+    "@types/react-select": "^3.0.20",
     "@zeit/next-css": "^1.0.1",
-    "acorn": "^7.2.0",
-    "bootstrap": "^4.3.1",
-    "chroma-js": "^2.0.6",
-    "clipboard": "^2.0.4",
+    "acorn": "^7.4.0",
+    "bootstrap": "^4.5.2",
+    "chroma-js": "^2.1.0",
+    "clipboard": "^2.0.6",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.12.4",
-    "js-base64": "^2.5.1",
+    "js-base64": "^2.6.4",
     "local-storage": "^2.0.0",
-    "lodash": "^4.17.19",
-    "lodash.combinations": "^18.9.19",
+    "lodash": "^4.17.20",
+    "lodash.combinations": "^18.10.0",
     "lru-cache": "^5.1.1",
-    "lzutf8": "^0.5.5",
-    "mathjs": "^6.6.2",
-    "next": "^9.4.0",
-    "query-string": "^6.8.3",
-    "react": "^16.10.2",
-    "react-autocomplete-input": "^1.0.12",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
+    "lzutf8": "^0.5.6",
+    "mathjs": "^6.6.5",
+    "next": "^9.5.3",
+    "query-string": "^6.13.2",
+    "react": "^16.13.1",
+    "react-autocomplete-input": "^1.0.14",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
-    "react-select": "^3.0.8",
+    "react-select": "^3.1.0",
     "recharts": "^1.8.5",
     "reshake": "^1.2.1",
     "styled-components": "^4.4.1",
-    "svd-js": "^1.0.6",
+    "svd-js": "^1.1.1",
     "use-mouse-leave": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.0",
-    "@types/react": "^16.9.7",
-    "@types/react-test-renderer": "^16.9.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@types/enzyme": "^3.10.7",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.62",
+    "@types/react": "^16.9.49",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^24.9.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "react-test-renderer": "^16.10.2",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2"
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.9.7"
   }
 }
