--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "build_lineup_leaderboard": "node .next/server/buildLeaderboards.js"
+    "build_leaderboards": "node .next/server/buildLeaderboards.js"
   },
   "repository": {
     "type": "git",
