--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.5.2",
     "chroma-js": "^2.1.0",
     "clipboard": "^2.0.6",
+    "fetch-retry-ts": "^1.1.23",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.12.4",
     "js-base64": "^2.6.4",
