--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,7 @@
 export CLUSTER_ID=
 export CLUSTER_USER=
 export CLUSTER_PASS=
+export LEADERBOARD_BUCKET=
 export GA_KEY=
 export MEN_CURR_UPDATE=
 export WOMEN_CURR_UPDATE=
