--- a/now.json
+++ b/now.json
@@ -10,6 +10,7 @@
     "CLUSTER_ID": "@cluster-id",
     "CLUSTER_USER": "@cluster-user",
     "CLUSTER_PASS": "@cluster-pass",
+    "LEADERBOARD_BUCKET": "@leaderboard-bucket",
     "GA_KEY": "@ga-key",
     "MEN_CURR_UPDATE": "@men-curr-update",
     "WOMEN_CURR_UPDATE": "@women-curr-update"
