--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.5.0",
+    "fetch-mock": "^9.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "next-compose": "0.0.2",
