--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.5.2",
     "chroma-js": "^2.1.0",
     "clipboard": "^2.0.6",
+    "date-fns": "^2.28.0",
     "fetch-retry-ts": "^1.1.23",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.12.4",
@@ -51,6 +52,7 @@
     "react": "^16.13.1",
     "react-autocomplete-input": "^1.0.14",
     "react-bootstrap": "^1.3.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
