--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.5.2",
     "chroma-js": "^2.1.0",
     "clipboard": "^2.0.6",
+    "core-js": "^3.23.3",
     "date-fns": "^2.28.0",
     "fetch-retry-ts": "^1.1.23",
     "isomorphic-unfetch": "^3.0.0",
@@ -80,6 +81,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.5.0",
     "fetch-mock": "^9.11.0",
+    "handlebars": "^4.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "next-compose": "0.0.2",
