Incorporate a batch of depandabot version upgrades

--- a/package.json
+++ b/package.json
@@ -38,18 +38,21 @@
     "clipboard": "^2.0.6",
     "core-js": "^3.23.3",
     "date-fns": "^2.28.0",
+    "elliptic": "^6.5.4",
     "fetch-retry-ts": "^1.1.23",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.12.4",
     "js-base64": "^2.6.4",
     "linq": "^3.2.4",
     "local-storage": "^2.0.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lodash.combinations": "^18.10.0",
     "lru-cache": "^5.1.1",
     "lzutf8": "^0.5.6",
     "mathjs": "^6.6.5",
     "next": "^9.5.3",
+    "path-parse": "^1.0.7",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-autocomplete-input": "^1.0.14",
@@ -61,10 +64,14 @@
     "react-select": "^3.1.0",
     "recharts": "^1.8.5",
     "reshake": "^1.2.1",
+    "ssri": "^6.0.2",
     "styled-components": "^4.4.1",
     "svd-js": "^1.1.1",
     "tabletojson": "^2.0.7",
-    "use-mouse-leave": "^1.0.0"
+    "tmpl": "^1.0.5",
+    "use-mouse-leave": "^1.0.0",
+    "ws": "^5.2.3",
+    "y18n": "^4.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
