--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^2.28.0",
     "elliptic": "^6.5.4",
     "fetch-retry-ts": "^1.1.23",
+    "hosted-git-info": "^2.8.9",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^1.12.4",
     "js-base64": "^2.6.4",
