Add faster logic for grade LUT, needs test suite and currently FF'd out by default

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
+    "@collectable/red-black-tree": "^5.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
