--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-ga4": "^2.1.0",
     "react-loading-overlay": "^1.0.1",
     "react-select": "^3.1.0",
     "recharts": "^2.2.0",
