Enable leaderboards for 23/24

--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,5 @@ export MEN_CURR_UPDATE=
 export WOMEN_CURR_UPDATE=
 # Obtain this as follows: https://vercel.com/docs/more/deploy-hooks
 export REDEPLOY_HOOK_ID=
+# Obtain from the vercel settings page:
+export VERCEL_TOKEN=
