--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,6 @@
 {
   "build": {
-    "env": {
-      "GA_KEY": "@ga-key",
-      "MEN_CURR_UPDATE": "@men-curr-update",
-      "WOMEN_CURR_UPDATE": "@women-curr-update"
-    }
+    "env": {}
   },
-  "env": {
-    "CLUSTER_ID": "@cluster-id",
-    "CLUSTER_USER": "@cluster-user",
-    "CLUSTER_PASS": "@cluster-pass",
-    "LEADERBOARD_BUCKET": "@leaderboard-bucket",
-    "GA_KEY": "@ga-key",
-    "MEN_CURR_UPDATE": "@men-curr-update",
-    "WOMEN_CURR_UPDATE": "@women-curr-update"
-  }
+  "env": {}
 }
