Background effort to get HE working on Next12/React17

--- a/package.json
+++ b/package.json
@@ -23,28 +23,27 @@
   "homepage": "https://github.com/Alex-At-Home/cbb-on-off-analyzer#readme",
   "dependencies": {
     "@collectable/red-black-tree": "^5.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@ronchalant/react-loading-overlay": "1.1.0",
     "@types/chroma-js": "^1.4.3",
-    "@types/clipboard": "^2.0.1",
-    "@types/lodash": "^4.14.161",
-    "@types/lru-cache": "^5.1.0",
+    "@types/clipboard": "^2.0.2",
+    "@types/lodash": "^4.14.178",
+    "@types/lru-cache": "^5.1.1",
     "@types/query-string": "^6.3.0",
-    "@types/react-select": "^3.0.20",
-    "@zeit/next-css": "^1.0.1",
-    "acorn": "^7.4.0",
-    "bootstrap": "^4.5.2",
-    "chroma-js": "^2.1.0",
-    "clipboard": "^2.0.6",
-    "core-js": "^3.23.3",
-    "date-fns": "^2.28.0",
+    "acorn": "^7.4.1",
+    "bootstrap": "^4.6.0",
+    "chroma-js": "^2.1.2",
+    "clipboard": "^2.0.8",
+    "core-js": "^3.25.1",
+    "date-fns": "^2.29.2",
     "elliptic": "^6.5.4",
-    "fetch-retry-ts": "^1.1.23",
+    "fetch-retry-ts": "^1.1.26",
     "hosted-git-info": "^2.8.9",
     "isomorphic-unfetch": "^3.0.0",
-    "jquery": "^1.12.4",
+    "jquery": "^3.6.0",
     "js-base64": "^2.6.4",
     "linq": "^3.2.4",
     "local-storage": "^2.0.0",
@@ -54,51 +53,49 @@
     "lru-cache": "^5.1.1",
     "lzutf8": "^0.5.6",
     "mathjs": "^6.6.5",
-    "next": "^9.5.3",
+    "next": "^12.3.4",
     "path-parse": "^1.0.7",
-    "query-string": "^6.13.2",
-    "react": "^16.14.0",
+    "query-string": "^6.14.1",
+    "react": "^17.0.2",
     "react-autocomplete-input": "^1.0.14",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.6.4",
     "react-date-range": "^1.4.0",
-    "react-dom": "^16.14.0",
-    "react-ga": "^2.7.0",
+    "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-ga4": "^2.1.0",
-    "react-loading-overlay": "^1.0.1",
-    "react-select": "^3.1.0",
-    "recharts": "^2.2.0",
+    "react-select": "^3.2.0",
+    "recharts": "^2.3.0",
     "reshake": "^1.2.1",
     "ssri": "^6.0.2",
     "statistics.js": "^1.0.0",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.3.3",
     "svd-js": "^1.1.1",
     "tabletojson": "^2.0.7",
     "tmpl": "^1.0.5",
     "use-mouse-leave": "^1.0.0",
-    "ws": "^5.2.3",
-    "y18n": "^4.0.1"
+    "ws": "^7.4.6",
+    "y18n": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@types/enzyme": "^3.10.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.14.5",
+    "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^18.11.16",
-    "@types/react": "^16.9.49",
-    "@types/react-test-renderer": "^16.9.3",
-    "babel-jest": "^24.9.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.42",
+    "@types/react-test-renderer": "^17.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.5.0",
+    "enzyme-to-json": "^3.6.1",
     "fetch-mock": "^9.11.0",
-    "handlebars": "^4.5.3",
+    "handlebars": "^4.7.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "next-compose": "0.0.2",
-    "react-test-renderer": "^16.13.1",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.9.7"
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.4.4"
   }
 }
