--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@ronchalant/react-loading-overlay": "1.1.0",
+    "@ronchalant/react-loading-overlay": "^1.1.0",
     "@types/chroma-js": "^1.4.3",
     "@types/clipboard": "^2.0.2",
     "@types/lodash": "^4.14.178",
