Get jest framework working

--- a/package.json
+++ b/package.json
@@ -81,13 +81,13 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.14.5",
     "@types/enzyme": "^3.10.10",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.42",
     "@types/react-test-renderer": "^17.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "^26.6.3",
+    "cheerio": "^1.0.0-rc.12",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "fetch-mock": "^9.11.0",
