Fixed offseason leaderboard table autocomplete and tests over lunch

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^2.29.2",
     "elliptic": "^6.5.4",
     "fetch-retry-ts": "^1.1.26",
+    "get-input-selection": "^1.1.4",
     "hosted-git-info": "^2.8.9",
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^3.6.0",
@@ -57,7 +58,7 @@
     "path-parse": "^1.0.7",
     "query-string": "^6.14.1",
     "react": "^17.0.2",
-    "react-autocomplete-input": "^1.0.14",
+    "react-autocomplete-input": "^1.0.28",
     "react-bootstrap": "^1.6.4",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
@@ -66,6 +67,7 @@
     "react-select": "^3.2.0",
     "recharts": "^2.3.0",
     "reshake": "^1.2.1",
+    "scroll-into-view-if-needed": "^3.1.0",
     "ssri": "^6.0.2",
     "statistics.js": "^1.0.0",
     "styled-components": "^5.3.3",
