--- a/package.json
+++ b/package.json
@@ -82,10 +82,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^12.1.5",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.11.10",
-    "@types/react": "^17.0.42",
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^18.3.1",
     "@types/react-test-renderer": "^17.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "^26.6.3",
