--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "path-parse": "^1.0.7",
     "query-string": "^6.14.1",
     "react": "^17.0.2",
-    "react-autocomplete-input": "^1.0.28",
     "react-bootstrap": "^1.6.4",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
@@ -73,6 +72,7 @@
     "styled-components": "^5.3.3",
     "svd-js": "^1.1.1",
     "tabletojson": "^2.0.7",
+    "textarea-caret": "^3.1.0",
     "tmpl": "^1.0.5",
     "use-mouse-leave": "^1.0.0",
     "ws": "^7.4.6",
