First pass at shot chart

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ronchalant/react-loading-overlay": "^1.1.0",
     "@types/chroma-js": "^1.4.3",
     "@types/clipboard": "^2.0.2",
+    "@types/d3": "^7.4.3",
+    "@types/d3-hexbin": "^0.2.5",
     "@types/lodash": "^4.14.178",
     "@types/lru-cache": "^5.1.1",
     "@types/query-string": "^6.3.0",
@@ -38,6 +40,8 @@
     "chroma-js": "^2.1.2",
     "clipboard": "^2.0.8",
     "core-js": "^3.25.1",
+    "d3": "^7.9.0",
+    "d3-hexbin": "^0.2.2",
     "date-fns": "^2.29.2",
     "elliptic": "^6.5.4",
     "fetch-retry-ts": "^1.1.26",
