--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@react-three/fiber": "^7.0.29",
     "@ronchalant/react-loading-overlay": "^1.1.0",
     "@types/chroma-js": "^1.4.3",
     "@types/clipboard": "^2.0.2",
@@ -77,6 +78,8 @@
     "svd-js": "^1.1.1",
     "tabletojson": "^4.1.5",
     "textarea-caret": "^3.1.0",
+    "three": "^0.170.0",
+    "three-stdlib": "^2.34.0",
     "tmpl": "^1.0.5",
     "use-mouse-leave": "^1.0.0",
     "ws": "^7.4.6",
@@ -94,6 +97,7 @@
     "@types/react": "^17.0.83",
     "@types/react-dom": "^18.3.1",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/three": "^0.169.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "^26.6.3",
     "cheerio": "^1.0.0-rc.12",
