--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^2.29.2",
     "elliptic": "^6.5.4",
     "fetch-retry-ts": "^1.1.26",
+    "fflate": "^0.8.2",
     "get-input-selection": "^1.1.4",
     "hosted-git-info": "^2.8.9",
     "isomorphic-unfetch": "^3.0.0",
