Very basic geo view of CBB players

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/clipboard": "^2.0.2",
     "@types/d3": "^7.4.3",
     "@types/d3-hexbin": "^0.2.5",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@types/lodash": "^4.14.178",
     "@types/lru-cache": "^5.1.1",
     "@types/query-string": "^6.3.0",
@@ -52,6 +53,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "jquery": "^3.6.0",
     "js-base64": "^2.6.4",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "linq": "^3.2.4",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.21",
@@ -69,6 +72,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-ga4": "^2.1.0",
+    "react-leaflet": "^3.2.5",
     "react-select": "^3.2.0",
     "recharts": "^2.3.0",
     "reshake": "^1.2.1",
@@ -94,6 +98,7 @@
     "@testing-library/react": "^12.1.5",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^26.0.24",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.83",
     "@types/react-dom": "^18.3.1",
