--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/lodash": "^4.14.178",
     "@types/lru-cache": "^5.1.1",
     "@types/query-string": "^6.3.0",
+    "@types/react-csv": "^1.1.10",
     "acorn": "^7.4.1",
     "bootstrap": "^4.5.2",
     "chroma-js": "^2.1.2",
@@ -68,6 +69,7 @@
     "query-string": "^6.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-csv": "^2.2.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
