Some work to start pulling in team defensive play styles

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 npm-debug.log*
 coverage
 transfers_2024.json
+#(rename this every year)
+public/leaderboards/lineups/*2024*
+leaderboardDebug/*
 
 .vercel
 .metals
